# simplylab

./: .dockerignore  .env.example  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sources.list
simplylab/: database.py  entity.py  error.py  main.py
simplylab/model/: entity.py  req.py  res.py  table.py
simplylab/providers/: __init__.py  chat.py  openrouter.py  user.py
simplylab/services/: __init__.py  chat.py
src/simplylab/: main.py
tests/: test_middle_out.py
